--- a/packer/traefik.service
+++ b/packer/traefik.service
@@ -3,11 +3,11 @@ Description="Traefik Reverse Proxy"
 Documentation=https://traefik.io
 Requires=network-online.target
 After=network-online.target
-ConditionFileNotEmpty=/etc/traefik/traefik.toml
+ConditionFileNotEmpty=/etc/traefik/traefik.yaml
 
 [Service]
 Restart=on-failure
-ExecStart=/usr/local/bin/traefik --configfile=/etc/traefik/traefik.toml
+ExecStart=/usr/local/bin/traefik
 ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
