use ansible for provisioning

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ override.tf.json
 # End of https://www.toptal.com/developers/gitignore/api/terraform
 
 .terraform.lock.hcl
+
+ssh/
+ansible/inventory/hosts
