--- a/cloud-init/haproxy.cfg
+++ b/cloud-init/haproxy.cfg
@@ -20,12 +20,16 @@ frontend http
   http-request set-header x-forwarded-proto %[ssl_fc,iif(https,http)]
 
   # acls
-  acl host_consul hdr(host) -i consul.localhost
-  acl host_nomad hdr(host)  -i nomad.localhost
+  acl host_consul hdr(host)  -i consul.${external_domain}
+  acl host_vault hdr(host)   -i vault.${external_domain}
+  acl host_nomad hdr(host)   -i nomad.${external_domain}
+  acl host_traefik hdr(host) -i traefik.${external_domain}
 
   # backends
-  use_backend consul if host_consul
-  use_backend nomad  if host_nomad
+  use_backend consul  if host_consul
+  use_backend vault   if host_vault
+  use_backend nomad   if host_nomad
+  use_backend traefik if host_traefik
 
   default_backend infra_clients
 
@@ -34,9 +38,19 @@ backend consul
   server ${name} ${addr}:8501 ssl verify required ca-file /etc/certs.d/ca.pem crt /etc/certs.d/cert.pem
   %{~ endfor }
 
+backend vault
+  %{~ for name, addr in vault_servers ~}
+  server ${name} ${addr}:8200 ssl verify required ca-file /etc/certs.d/ca.pem crt /etc/certs.d/cert.pem
+  %{~ endfor }
+
 backend nomad
   %{~ for name, addr in nomad_servers ~}
   server ${name} ${addr}:4646 ssl verify required ca-file /etc/certs.d/ca.pem crt /etc/certs.d/cert.pem
+  %{~ endfor }
+
+backend traefik
+  %{~ for name, addr in nomad_infra_clients ~}
+  server ${name} ${addr}:8080
   %{~ endfor }
 
 backend infra_clients
